--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-dropzone": "^5.0.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
