--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.0",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.5.0",
     "react-dropzone": "^5.0.2",
     "react-redux": "^5.0.7",
