--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.5.1",
     "massive": "^5.4.0",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.0",
