--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.21",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
+    "numeral": "^2.0.6",
     "react": "^16.5.0",
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.5.0",
@@ -23,7 +24,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-stripe-elements": "^2.0.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "stripe": "^6.12.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
