--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-spinners": "^0.4.7",
     "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.0",
     "stripe": "^6.12.1"
