--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm-run-all": "^4.1.3",
     "numeral": "^2.0.6",
     "react": "^16.5.0",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.5.0",
     "react-dropzone": "^5.0.2",
