formatted phone numbers

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "firebase": "^5.5.1",
+    "libphonenumber-js": "^1.6.9",
     "massive": "^5.4.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
