--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.5.0",
     "react-dropzone": "^5.0.2",
+    "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
