--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-spinners": "^0.4.7",
     "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.0",
+    "redux-promise": "^0.6.0",
     "stripe": "^6.12.1"
   },
   "scripts": {
